week 6 is finished, 7 is halfway through

--- a/weather.ipynb
+++ b/weather.ipynb
@@ -97,7 +97,84 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Week 5 - Download Today's Weather Data\n",
+    "\n",
+    "### Task:\n",
+    "\n",
+    "- Download the weather data from Met Eireann (https://prodapi.metweb.ie/observations/athenry/today) using `wget` along with the option `-0 <filename>`,\n",
+    "- Save the file as `weather.json` in to the `data/weather` directory\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Steps taken:\n",
+    "\n",
+    "- change my directory to `data/weather/` \n",
+    "- executed the command `wget -O weather.json https://prodapi.metweb.ie/observations/athenry/today` \n",
+    "- `-O` options is allows us to save the `wget` output as a file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Week 6 - Timestamp the Data\n",
+    "\n",
+    "### Task:\n",
+    "\n",
+    "- Modify the command from Week 5 Task and save the weather data as `YYYYmmdd_HHMMSS.json` format\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Steps taken:\n",
+    "\n",
+    "- change the directory to `data/weather/`\n",
+    "- execute the command as `` wget -O `date +\"%Y%m%d_%H%M%S.json\"`https://prodapi.metweb.ie/observations/athenry/today ``\n",
+    "- `` ` `` allows us to execute `date` command in `wget` command"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Week 7 - Write the Script\n",
+    "\n",
+    "### Task:\n",
+    "\n",
+    "- Write a bash script called `weather.sh` in the root directory.\n",
+    "- The script should automate the process from Week 6 Task\n",
+    "- Saving the weather data to `data/weather/` \n",
+    "- Make the script executable and test it by running it.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Steps taken:\n",
+    "\n",
+    "- started the creating the script file with `touch weather.sh`\n",
+    "- In `weather.sh` file, started with shebang command `#! bin/bash/` where we tell the system how to execute the command in the script.\n",
+    "- then added the command which is `` wget -O `date +\"%Y%m%d_%H%M%S.json\"`https://prodapi.metweb.ie/observations/athenry/today ``\n",
+    "- get back to the terminal, and did the sanity check with `ls -al` to see the script, its type and the file permissions.\n",
+    "- the script's permission was set to `-rw` which is not executable\n",
+    "- change the permission using `chmod u+x ./weather.sh` \n",
+    "- did the sanity check again, everything looked great and executed it with `./weather.sh/`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Week  - \n",
+    "\n",
+    "### Task:\n",
+    "\n",
+    "- \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Steps taken:\n",
+    "\n",
+    "- "
+   ]
   }
  ],
  "metadata": {
