created the code fences in weather.ipynb

--- a/weather.ipynb
+++ b/weather.ipynb
@@ -27,7 +27,17 @@
     "- started the terminal via in GitHub Codespace. I was at main directory as '/workspaces/computer_infrastructure_assessment'.\n",
     "- I proceeded with `mkdir data/` to create the directory. (`mkdir` is a command used for creating a folder/directory)\n",
     "- Then, I changed my directory in order to create other two subdirectories using `cd data/`\n",
-    "- Lastly, I created two subdirectories using `mkdir timestamps/` and `mkdir weather/` "
+    "- Lastly, I created two subdirectories using `mkdir timestamps/` and `mkdir weather/` \n",
+    "\n",
+    "\n",
+    "Chronology of the commands;\n",
+    "\n",
+    "``` bash\n",
+    "mkdir data/\n",
+    "cd data/\n",
+    "mkdir timestamps/\n",
+    "mkdir weather/\n",
+    "```"
    ]
   },
   {
@@ -49,7 +59,16 @@
     "- I did sanity check first by promting the date and time info using `date`, then proceeded with `date >> now.txt` \n",
     "- I directed the output into the file called `now.txt` insted of displaying on the terminal by using `>>`\n",
     "- since `now.txt` was not exist in the directory, it was created in order to store the output. \n",
-    "- then I executed the same command 10 times. Since, the file was created during the initial execution, rest were appended (`>>`) in the file. "
+    "- then I executed the same command 10 times. Since, the file was created during the initial execution, rest were appended (`>>`) in the file. \n",
+    "\n",
+    "Chronology of the commands;\n",
+    "``` bash\n",
+    "cd data/timestamps\n",
+    "date\n",
+    "date >> now.txt\n",
+    "...\n",
+    "date >> now.txt\n",
+    "```"
    ]
   },
   {
@@ -70,7 +89,17 @@
     "- First, checked my command to see if the output was in the right format, `date +\"%Y%m%d_%H%M%S\"`\n",
     "- once I was sure about the output accuracy, I proceeded with `date +\"%Y%m%d_%H%M%S\" >> formatted.txt`\n",
     "- then I executed the same command 10 times. \n",
-    "- Lastly, I check the file using `more formatted.txt` to ensure outputs were stored in the file."
+    "- Lastly, I check the file using `more formatted.txt` to ensure outputs were stored in the file.\n",
+    "\n",
+    "Chronology of the commands;\n",
+    "\n",
+    "```bash\n",
+    "date +\"%Y%m%d_%H%M%S\"\n",
+    "date +\"%Y%m%d_%H%M%S\" >> formatted.txt\n",
+    "...\n",
+    "date +\"%Y%m%d_%H%M%S\" >> formatted.txt\n",
+    "more formatted.txt\n",
+    "```"
    ]
   },
   {
@@ -91,7 +120,13 @@
     "- Executed the command `` touch `date +\"%Y%m%d_%H%M%S\"`.txt ``\n",
     "- `touch` creates the file, `date +\"%Y%m%d_%H%M%S\"` outputs the curent date&time in specified format. \n",
     "- putting `date +\"%Y%m%d_%H%M%S\"` into `` ` `` backticks allows us to execute the date command in them. \n",
-    "- hence, current date&time becomes the file name"
+    "- hence, current date&time becomes the file name\n",
+    "\n",
+    "Chronology of the commands;\n",
+    "``` bash\n",
+    "cd data/timestamps\n",
+    "touch `date +\"%Y%m%d_%H%M%S\"`.txt\n",
+    "```"
    ]
   },
   {
@@ -111,7 +146,13 @@
     "\n",
     "- change my directory to `data/weather/` \n",
     "- executed the command `wget -O weather.json https://prodapi.metweb.ie/observations/athenry/today` \n",
-    "- `-O` options is allows us to save the `wget` output as a file"
+    "- `-O` options is allows us to save the `wget` output as a file\n",
+    "\n",
+    "Chronology of the commands;\n",
+    "```bash\n",
+    "cd data/weather/\n",
+    "wget -O weather.json https://prodapi.metweb.ie/observations/athenry/today\n",
+    "```"
    ]
   },
   {
@@ -130,7 +171,13 @@
     "\n",
     "- change the directory to `data/weather/`\n",
     "- execute the command as `` wget -O `date +\"%Y%m%d_%H%M%S.json\"`https://prodapi.metweb.ie/observations/athenry/today ``\n",
-    "- `` ` `` allows us to execute `date` command in `wget` command"
+    "- `` ` `` allows us to execute `date` command in `wget` command\n",
+    "\n",
+    "Chronology of the commands;\n",
+    "```bash\n",
+    "cd data/weather/\n",
+    "wget -O `date +\"%Y%m%d_%H%M%S.json\"`https://prodapi.metweb.ie/observations/athenry/today\n",
+    "```"
    ]
   },
   {
@@ -156,24 +203,16 @@
     "- get back to the terminal, and did the sanity check with `ls -al` to see the script, its type and the file permissions.\n",
     "- the script's permission was set to `-rw` which is not executable\n",
     "- change the permission using `chmod u+x ./weather.sh` \n",
-    "- did the sanity check again, everything looked great and executed it with `./weather.sh/`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Week  - \n",
+    "- did the sanity check again, everything looked great and executed it with `./weather.sh`\n",
     "\n",
-    "### Task:\n",
-    "\n",
-    "- \n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Steps taken:\n",
-    "\n",
-    "- "
+    "Chronology of the commands;\n",
+    "```bash\n",
+    "touch weather.sh\n",
+    "# wrote the script in the sh file\n",
+    "ls -al\n",
+    "chmod u+x weather.sh\n",
+    "./weather.sh\n",
+    "```"
    ]
   }
  ],
