--- a/weather.ipynb
+++ b/weather.ipynb
@@ -214,11 +214,384 @@
     "./weather.sh\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Weather Analysis\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data frames.\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read the data\n",
+    "df = pd.read_json('data/weather/20241124_165131.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>symbol</th>\n",
+       "      <th>weatherDescription</th>\n",
+       "      <th>text</th>\n",
+       "      <th>windSpeed</th>\n",
+       "      <th>windGust</th>\n",
+       "      <th>cardinalWindDirection</th>\n",
+       "      <th>windDirection</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>rainfall</th>\n",
+       "      <th>pressure</th>\n",
+       "      <th>dayName</th>\n",
+       "      <th>date</th>\n",
+       "      <th>reportTime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Athenry</td>\n",
+       "      <td>10</td>\n",
+       "      <td>05n</td>\n",
+       "      <td>Rain showers</td>\n",
+       "      <td>\"Rain shower\"</td>\n",
+       "      <td>35</td>\n",
+       "      <td>61</td>\n",
+       "      <td>SW</td>\n",
+       "      <td>225</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>976</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>2024-11-24</td>\n",
+       "      <td>00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Athenry</td>\n",
+       "      <td>10</td>\n",
+       "      <td>40n</td>\n",
+       "      <td>Light rain showers</td>\n",
+       "      <td>\"Recent Rain\"</td>\n",
+       "      <td>31</td>\n",
+       "      <td>52</td>\n",
+       "      <td>SW</td>\n",
+       "      <td>225</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>977</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>2024-11-24</td>\n",
+       "      <td>01:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Athenry</td>\n",
+       "      <td>9</td>\n",
+       "      <td>02n</td>\n",
+       "      <td>Fair</td>\n",
+       "      <td>\"Fair\"</td>\n",
+       "      <td>24</td>\n",
+       "      <td>46</td>\n",
+       "      <td>SW</td>\n",
+       "      <td>225</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>977</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>2024-11-24</td>\n",
+       "      <td>02:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Athenry</td>\n",
+       "      <td>8</td>\n",
+       "      <td>05n</td>\n",
+       "      <td>Rain showers</td>\n",
+       "      <td>\"Rain shower\"</td>\n",
+       "      <td>19</td>\n",
+       "      <td>56</td>\n",
+       "      <td>S</td>\n",
+       "      <td>180</td>\n",
+       "      <td>83</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>977</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>2024-11-24</td>\n",
+       "      <td>03:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Athenry</td>\n",
+       "      <td>8</td>\n",
+       "      <td>04n</td>\n",
+       "      <td>Cloudy</td>\n",
+       "      <td>\"Cloudy\"</td>\n",
+       "      <td>19</td>\n",
+       "      <td>-</td>\n",
+       "      <td>S</td>\n",
+       "      <td>180</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>977</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>2024-11-24</td>\n",
+       "      <td>04:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      name  temperature symbol  weatherDescription           text  windSpeed  \\\n",
+       "0  Athenry           10    05n        Rain showers  \"Rain shower\"         35   \n",
+       "1  Athenry           10    40n  Light rain showers  \"Recent Rain\"         31   \n",
+       "2  Athenry            9    02n                Fair         \"Fair\"         24   \n",
+       "3  Athenry            8    05n        Rain showers  \"Rain shower\"         19   \n",
+       "4  Athenry            8    04n              Cloudy       \"Cloudy\"         19   \n",
+       "\n",
+       "  windGust cardinalWindDirection  windDirection  humidity  rainfall  pressure  \\\n",
+       "0       61                    SW            225        90      0.40       976   \n",
+       "1       52                    SW            225        79      0.20       977   \n",
+       "2       46                    SW            225        75      0.00       977   \n",
+       "3       56                     S            180        83      0.01       977   \n",
+       "4        -                     S            180        81      0.10       977   \n",
+       "\n",
+       "  dayName       date reportTime  \n",
+       "0  Sunday 2024-11-24      00:00  \n",
+       "1  Sunday 2024-11-24      01:00  \n",
+       "2  Sunday 2024-11-24      02:00  \n",
+       "3  Sunday 2024-11-24      03:00  \n",
+       "4  Sunday 2024-11-24      04:00  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Show the data\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>windSpeed</th>\n",
+       "      <th>windDirection</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>rainfall</th>\n",
+       "      <th>pressure</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>8.941176</td>\n",
+       "      <td>25.294118</td>\n",
+       "      <td>198.529412</td>\n",
+       "      <td>81.294118</td>\n",
+       "      <td>0.160588</td>\n",
+       "      <td>977.647059</td>\n",
+       "      <td>2024-11-24 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>180.000000</td>\n",
+       "      <td>69.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>976.000000</td>\n",
+       "      <td>2024-11-24 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>180.000000</td>\n",
+       "      <td>79.000000</td>\n",
+       "      <td>0.010000</td>\n",
+       "      <td>977.000000</td>\n",
+       "      <td>2024-11-24 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>180.000000</td>\n",
+       "      <td>81.000000</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>978.000000</td>\n",
+       "      <td>2024-11-24 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>31.000000</td>\n",
+       "      <td>225.000000</td>\n",
+       "      <td>84.000000</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>978.000000</td>\n",
+       "      <td>2024-11-24 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>225.000000</td>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>0.700000</td>\n",
+       "      <td>979.000000</td>\n",
+       "      <td>2024-11-24 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.197424</td>\n",
+       "      <td>5.849837</td>\n",
+       "      <td>22.828485</td>\n",
+       "      <td>5.709255</td>\n",
+       "      <td>0.189059</td>\n",
+       "      <td>0.701888</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       temperature  windSpeed  windDirection   humidity   rainfall  \\\n",
+       "count    17.000000  17.000000      17.000000  17.000000  17.000000   \n",
+       "mean      8.941176  25.294118     198.529412  81.294118   0.160588   \n",
+       "min       7.000000  17.000000     180.000000  69.000000   0.000000   \n",
+       "25%       8.000000  20.000000     180.000000  79.000000   0.010000   \n",
+       "50%       9.000000  24.000000     180.000000  81.000000   0.100000   \n",
+       "75%      10.000000  31.000000     225.000000  84.000000   0.200000   \n",
+       "max      11.000000  35.000000     225.000000  90.000000   0.700000   \n",
+       "std       1.197424   5.849837      22.828485   5.709255   0.189059   \n",
+       "\n",
+       "         pressure                 date  \n",
+       "count   17.000000                   17  \n",
+       "mean   977.647059  2024-11-24 00:00:00  \n",
+       "min    976.000000  2024-11-24 00:00:00  \n",
+       "25%    977.000000  2024-11-24 00:00:00  \n",
+       "50%    978.000000  2024-11-24 00:00:00  \n",
+       "75%    978.000000  2024-11-24 00:00:00  \n",
+       "max    979.000000  2024-11-24 00:00:00  \n",
+       "std      0.701888                  NaN  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# END"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
