--- a/weather.ipynb
+++ b/weather.ipynb
@@ -137,7 +137,7 @@
     "\n",
     "### Task:\n",
     "\n",
-    "- Download the weather data from Met Eireann (https://prodapi.metweb.ie/observations/athenry/today) using `wget` along with the option `-0 <filename>`,\n",
+    "- Download the weather data from [Met Eireann](https://prodapi.metweb.ie/observations/athenry/today) using `wget` along with the option `-0 <filename>`,\n",
     "- Save the file as `weather.json` in to the `data/weather` directory\n",
     "\n",
     "---\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "4  Sunday 2024-11-24      04:00  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
